[package]
name = "coincheck_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
async-trait = "*"
mockall = "0.10.2"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
